Versão com README atualizado

--- a/web/templates/classificacao_manual.html
+++ b/web/templates/classificacao_manual.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="UTF-8">
-	<title>Classificação Manual de tweets</title>
+	<title>Classificação Manual de tweets.</title>
 	</head>
 	<body bgcolor="#FFFEBA">
 	<br>
